# FAIA

./: .gitattributes  Makefile  README.md  pyproject.toml
artifacts/run_logs/: pipeline_20260628_204301.jsonl  pipeline_20260628_204301_summary.json
assortment/: README.md
assortment/configs/: assortment_small.yaml
assortment/methods/: hybrid.yaml  ml_topk.yaml  reverse_exclude.yaml  topk.yaml
assortment/reports/: exp_assortment_v001_topk_assortment_report.md  exp_assortment_v001_topk_assortment_validation_report.md
assortment/schemas/: assortment_metrics.schema.yaml  assortment_result.schema.yaml  candidate_pool.schema.yaml  k_table.schema.yaml
assortment/scripts/: evaluate_assortment.py  run_assortment.py  validate_assortment_run.py
assortment/src/: __init__.py  candidate_pool.py  common.py  evaluation.py  hybrid.py  k_selector.py  ml_topk.py  publish.py  reverse_exclude.py  topk.py  validation.py
assortment/tests/: test_ml_topk_and_evaluation.py
configs/: project.yaml
data/: README.md
data/configs/: synthetic_medium.yaml  synthetic_small.yaml
data/schemas/: calendar.schema.yaml  cost_config.schema.yaml  inventory_snapshot.schema.yaml  order_items.schema.yaml  orders.schema.yaml  promotion_plan.schema.yaml  sku_fdc_eligibility.schema.yaml  sku_master.schema.yaml  stockout_events.schema.yaml  transfer_plan.schema.yaml  warehouse_master.schema.yaml
data/scripts/: build_stage1_artifacts.py  generate_synthetic_data.py  register_data_version.py  (+1 more)
evaluation/: README.md
inventory/: README.md
scripts/: run_full_pipeline.py
simulation/: README.md
(+145 files in other folders)
