[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faia"
version = "0.1.0"
description = "Fulfillment-oriented Assortment and Inventory Allocation engineering pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[tool.setuptools]
py-modules = []

[tool.unittest]
start-directory = "."
